<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weatherpage">

    <!-- TODO: Update blank fragment layout -->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:text="@string/hello_blank_fragment" />-->


    <Button
        android:id="@+id/backButton"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/back_button"
        android:textAlignment="viewStart"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="315dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/menu_button"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="278dp"
        android:layout_height="89dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/temperatureCelsius"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="189dp"
        android:text="@string/temperature_celcius"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="100sp" />

    <Switch
        android:id="@+id/addCityToFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/add_to_favourites"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="132dp"
        android:layout_marginTop="313dp"
        android:text="@string/feels_like"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/next7days"
        android:layout_width="410dp"
        android:layout_height="295dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstDay"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/secondDay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/thirdDay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/fourthDay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/fifthDay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/sixthDay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/seventhDay"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/weatherDetails"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="-2dp"
        android:layout_marginBottom="346dp"
        android:text="@string/weather_details" />

    <Button
        android:id="@+id/favouriteCities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="680dp"
        android:layout_marginBottom="3dp"
        android:text="@string/favourite_cities_button"
        android:textSize="16sp" />


</RelativeLayout>
