<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menupage">

    <!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:text="@string/hello_blank_fragment" />-->

    <Button
        android:id="@+id/backButton"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/back_button"
        android:textAlignment="viewStart"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="315dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/menu_button"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/optionsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="77dp"
        android:text="@string/menu_options"
        android:textColor="#3F51B5"
        android:textSize="60sp" />

    <Switch
        android:id="@+id/unitSwitch"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:text="Switch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/backgroundSwitch"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="158dp"
        android:text="Switch"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</RelativeLayout>
